# hikyuu

./: .clang-format  .cproject  .gitattributes  .gitignore  .gitmodules  .lua-format  .project  .travis.yml  CMakeLists.txt  CNAME  Jamroot.linux  Jamroot.win  LICENSE  LICENSE.996  README.md  README.rst  asan.sup  baidu-verify-AF8C14F9B0.txt  baidu_verify_altOhaPWV3.html  boost-build.jam.linux  boost-build.jam.win  build.bat  build.sh  config.h.in  config_utils.h.in  copy_dependents.lua  cppcheck.cppcheck  doxyfile  fenge.py  finance_fields.html  footer.html  hdf5index.py  header.html  index.html  juanzheng.txt  notepad_workshop  params.json  pytest.bat  readme.md  requirements.txt  (+9 more)
libs/hikyuu/: .cproject  .project  Block.cpp  Block.h  CMakeLists.txt  DataType.h  Jamfile  KData.cpp  KData.h  KDataBufferImp.cpp  KDataBufferImp.h  KDataImp.cpp  KDataImp.h  KQuery.cpp  KQuery.h  KRecord.cpp  KRecord.h  Log.cpp  Log.h  MarketInfo.cpp  MarketInfo.h  Stock.cpp  Stock.h  StockManager.cpp  StockManager.h  StockMapIterator.h  StockTypeInfo.cpp  StockTypeInfo.h  StockWeight.cpp  config.h  doc.h  hikyuu.cpp  hikyuu.h  hikyuu.vcxproj  hikyuu.vcxproj.filters  hikyuu_msvc10.vcxproj  hikyuu_msvc10.vcxproj.filters
libs/hikyuu/data_driver/: BaseInfoDriver.cpp  BaseInfoDriver.h  BlockInfoDriver.cpp  BlockInfoDriver.h  DataDriverFactory.cpp  DataDriverFactory.h  KDataDriver.cpp  KDataDriver.h  KDataDriverImp.h  KDataTempCsvDriver.cpp  KDataTempCsvDriver.h
libs/hikyuu/datetime/: Datetime.cpp  Datetime.h
libs/hikyuu/indicator/: Indicator.cpp  Indicator.h  IndicatorImp.cpp  IndicatorImp.h  (+6 more)
(+7135 files in other folders)
